--- a/Refs_RSeqFlow.bib
+++ b/Refs_RSeqFlow.bib
@@ -1,12 +1,103 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for M. Gonzalo Claros at 2023-02-07 17:06:54 +0100 
+%% Created for M. Gonzalo Claros at 2023-10-19 11:23:20 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Bullones2023aa,
+	abstract = {The pollen tube is a key innovation of land plants that is essential for successful fertilisation. Its development and growth have been profusely studied in model organisms, but in spite of the economic impact of olive trees, little is known regarding the genome-wide events underlying pollen hydration and growth in this species. To fill this gap, triplicate mRNA samples at 0, 1, 3, and 6 h of in vitro germination of olive cultivar Picual pollen were analysed by RNA-seq. A bioinformatics R workflow called RSeqFlow was developed contemplating the best practices described in the literature, covering from expression data filtering to differential expression and clustering, to finally propose hub genes. The resulting olive pollen transcriptome consisted of 22,418 reliable transcripts, where 5364 were differentially expressed, out of which 173 have no orthologue in plants and up to 3 of them might be pollen-specific transcription factors. Functional enrichment revealed a deep transcriptional reprogramming in mature olive pollen that is also dependent on protein stability and turnover to allow pollen tube emergence, with many hub genes related to heat shock proteins and F-box-containing proteins. Reprogramming extends to the first 3 h of growth, including processes consistent with studies performed in other plant species, such as global down-regulation of biosynthetic processes, vesicle/organelle trafficking and cytoskeleton remodelling. In the last stages, growth should be maintained from persistent transcripts. Mature pollen is equipped with transcripts to successfully cope with adverse environments, even though the in vitro growth seems to induce several stress responses. Finally, pollen-specific transcription factors were proposed as probable drivers of pollen germination in olive trees, which also shows an overall increased number of pollen-specific gene isoforms relative to other plants.},
+	author = {Bullones, Amanda and Castro, Antonio Jes{\'u}s and Lima-Cabello, Elena and Fernandez-Pozo, Noe and Bautista, Roc{\'\i}o and Alch{\'e}, Juan de Dios and Claros, Manuel Gonzalo},
+	date-added = {2023-10-19 11:04:43 +0200},
+	date-modified = {2023-10-19 11:11:08 +0200},
+	doi = {10.3390/plants12162894},
+	journal = {Plants (Basel)},
+	journal-full = {Plants (Basel, Switzerland)},
+	keywords = {RNA-seq; bioinformatics; germination; olive; pollen; pollen tube; reprogramming; transcriptomics},
+	number = {16},
+	pages = {2894},
+	pmc = {PMC10459472},
+	pmid = {37631106},
+	pst = {epublish},
+	title = {Transcriptomic Insight into the Pollen Tube Growth of Olea europaea L. subsp. europaea Reveals Reprogramming and Pollen-Specific Genes Including New Transcription Factors},
+	volume = {12},
+	year = {2023},
+	bdsk-url-1 = {https://doi.org/10.3390/plants12162894}}
+
+@article{Betensky2019,
+	author = {Rebecca A. Betensky},
+	date-added = {2023-10-13 19:14:25 +0200},
+	date-modified = {2023-10-13 19:14:38 +0200},
+	doi = {10.1080/00031305.2018.1529624},
+	eprint = {https://doi.org/10.1080/00031305.2018.1529624},
+	journal = {The American Statistician},
+	number = {sup1},
+	pages = {115-117},
+	publisher = {Taylor & Francis},
+	title = {The p-Value Requires Context, Not a Threshold},
+	url = {https://doi.org/10.1080/00031305.2018.1529624},
+	volume = {73},
+	year = {2019},
+	bdsk-url-1 = {https://doi.org/10.1080/00031305.2018.1529624}}
+
+@article{Amrhein2017aa,
+	abstract = {The widespread use of 'statistical significance' as a license for making a claim of a scientific finding leads to considerable distortion of the scientific process (according to the American Statistical Association). We review why degrading p-values into 'significant' and 'nonsignificant' contributes to making studies irreproducible, or to making them seem irreproducible. A major problem is that we tend to take small p-values at face value, but mistrust results with larger p-values. In either case, p-values tell little about reliability of research, because they are hardly replicable even if an alternative hypothesis is true. Also significance (p ≤ 0.05) is hardly replicable: at a good statistical power of 80%, two studies will be 'conflicting', meaning that one is significant and the other is not, in one third of the cases if there is a true effect. A replication can therefore not be interpreted as having failed only because it is nonsignificant. Many apparent replication failures may thus reflect faulty judgment based on significance thresholds rather than a crisis of unreplicable research. Reliable conclusions on replicability and practical importance of a finding can only be drawn using cumulative evidence from multiple independent studies. However, applying significance thresholds makes cumulative knowledge unreliable. One reason is that with anything but ideal statistical power, significant effect sizes will be biased upwards. Interpreting inflated significant results while ignoring nonsignificant results will thus lead to wrong conclusions. But current incentives to hunt for significance lead to selective reporting and to publication bias against nonsignificant findings. Data dredging, p-hacking, and publication bias should be addressed by removing fixed significance thresholds. Consistent with the recommendations of the late Ronald Fisher, p-values should be interpreted as graded measures of the strength of evidence against the null hypothesis. Also larger p-values offer some evidence against the null hypothesis, and they cannot be interpreted as supporting the null hypothesis, falsely concluding that 'there is no effect'. Information on possible true effect sizes that are compatible with the data must be obtained from the point estimate, e.g., from a sample average, and from the interval estimate, such as a confidence interval. We review how confusion about interpretation of larger p-values can be traced back to historical disputes among the founders of modern statistics. We further discuss potential arguments against removing significance thresholds, for example that decision rules should rather be more stringent, that sample sizes could decrease, or that p-values should better be completely abandoned. We conclude that whatever method of statistical inference we use, dichotomous threshold thinking must give way to non-automated informed judgment.},
+	author = {Amrhein, Valentin and Korner-Nievergelt, Fr{\"a}nzi and Roth, Tobias},
+	date-added = {2023-10-13 18:26:44 +0200},
+	date-modified = {2023-10-13 18:26:44 +0200},
+	doi = {10.7717/peerj.3544},
+	journal = {PeerJ},
+	journal-full = {PeerJ},
+	keywords = {Graded evidence; Nonsignificant; P-value; Publication bias; Replicability; Reproducibility; Significant; Threshold; Truth inflation; Winner's curse},
+	pages = {e3544},
+	pmc = {PMC5502092},
+	pmid = {28698825},
+	pst = {epublish},
+	title = {The earth is flat (p > 0.05): significance thresholds and the crisis of unreplicable research},
+	volume = {5},
+	year = {2017},
+	bdsk-url-1 = {https://doi.org/10.7717/peerj.3544}}
+
+@article{Mayo2022aa,
+	abstract = {While the common procedure of statistical significance testing and its accompanying concept of p-values have long been surrounded by controversy, renewed concern has been triggered by the replication crisis in science. Many blame statistical significance tests themselves, and some regard them as sufficiently damaging to scientific practice as to warrant being abandoned. We take a contrary position, arguing that the central criticisms arise from misunderstanding and misusing the statistical tools, and that in fact the purported remedies themselves risk damaging science. We argue that banning the use of p-value thresholds in interpreting data does not diminish but rather exacerbates data-dredging and biasing selection effects. If an account cannot specify outcomes that will not be allowed to count as evidence for a claim-if all thresholds are abandoned-then there is no test of that claim. The contributions of this paper are: To explain the rival statistical philosophies underlying the ongoing controversy; To elucidate and reinterpret statistical significance tests, and explain how this reinterpretation ameliorates common misuses and misinterpretations; To argue why recent recommendations to replace, abandon, or retire statistical significance undermine a central function of statistics in science: to test whether observed patterns in the data are genuine or due to background variability.},
+	author = {Mayo, Deborah G and Hand, David},
+	date-added = {2023-10-13 18:14:53 +0200},
+	date-modified = {2023-10-13 18:14:53 +0200},
+	doi = {10.1007/s11229-022-03692-0},
+	journal = {Synthese},
+	journal-full = {Synthese},
+	keywords = {Data-dredging; Error probabilities; Fisher; Neyman and Pearson; P-values; Statistical significance tests},
+	number = {3},
+	pages = {220},
+	pmc = {PMC9096069},
+	pmid = {35578622},
+	pst = {ppublish},
+	title = {Statistical significance and its critics: practicing damaging science, or damaging scientific practice?},
+	volume = {200},
+	year = {2022},
+	bdsk-url-1 = {https://doi.org/10.1007/s11229-022-03692-0}}
+
+@article{Montero2023aa,
+	abstract = {Over recent years many statisticians and researchers have highlighted that statistical inference would benefit from a better use and understanding of hypothesis testing, p-values, and statistical significance. We highlight three recommendations in the context of biochemical sciences. First recommendation: to improve the biological interpretation of biochemical data, do not use p-values (or similar test statistics) as thresholded values to select biomolecules. Second recommendation: to improve comparison among studies and to achieve robust knowledge, perform complete reporting of data. Third recommendation: statistical analyses should be reported completely with exact numbers (not as asterisks or inequalities). Owing to the high number of variables, a better use of statistics is of special importance in omic studies.},
+	author = {Montero, Olimpio and Hedeland, Mikael and Balgoma, David},
+	date-added = {2023-10-13 17:52:38 +0200},
+	date-modified = {2023-10-13 17:52:38 +0200},
+	doi = {10.1016/j.tibs.2023.01.009},
+	journal = {Trends Biochem Sci},
+	journal-full = {Trends in biochemical sciences},
+	keywords = {Storey's q-values; hypothesis testing; p-values; selective reporting},
+	month = {Jun},
+	number = {6},
+	pages = {503-512},
+	pmid = {36842858},
+	pst = {ppublish},
+	title = {Trials and tribulations of statistical significance in biochemistry and omics},
+	volume = {48},
+	year = {2023},
+	bdsk-url-1 = {https://doi.org/10.1016/j.tibs.2023.01.009}}
 
 @article{Croux2010,
 	author = {C. Croux and D. Dehon},
@@ -28,7 +119,8 @@
 	title = {Parameters behind "nonparametric" statistics: Kendall's tau,Somers' D and median differences},
 	url = {https://www.stata-journal.com/sjpdf.html?articlenum=st0007},
 	volume = {2},
-	year = {2002}}
+	year = {2002},
+	bdsk-url-1 = {https://www.stata-journal.com/sjpdf.html?articlenum=st0007}}
 
 @article{Ringner2008aa,
 	author = {Ringn{\'e}r, Markus},
