--- a/Rmds/20_Filtering.Rmd
+++ b/Rmds/20_Filtering.Rmd
@@ -12,42 +12,47 @@ all_are0 <- table(rowSums(x$counts == 0) == COL_NUMBER)
 
 # other counts
 total_genes <- dim(x)[1] # or nrow(x$counts)
-at_least_1 <- total_genes - none_is0[[2]] - all_are0[[2]]
+at_least_1 <- total_genes - none_is0[["TRUE"]] - all_are0[["TRUE"]]
 ```
 
 We can remove at the same time those unexpressed genes together with any **noisy genes** (genes with unreliable expression because they have low mapping counts [_underexpression_] in most samples). We will consider a minimal reliable expression when genes are expressed in at least one set of replicates.
 
 > **IMPORTANT:** The analysis cannot rely on `counts` since they depend on library sizes. [CPM] (_counts per million_) will be used instead of counts:
 
-    ```{r x.cpm}
-    # CMP for the x object containing raw data
-    x.cpm <- cpm(x)
-    ```
 
-Removing `CPM > 0` will remove genes with no expression in all samples. Increasing the threshold to `MIN_CPM` value defined in `configure_wf.R` will remove also the low-expressed genes.
+Removing `CPM > 0` will remove genes with no expression in all samples. We will take advantage of the `filterByExpr()` function to do a low stringency filter and then a new filter increasing the threshold to `MIN_CPM` value defined in `configure_wf.R` to remove also the low-expressed genes that are not removed by `filterByExpr()`.
 
 The minimal number of samples with `cpm > MIN_CPM` is the lowest number of replicates as defined in `EXP_FACTORS`.
 
 ```{r numRep}
+# non stringent filtering
+keep.exprs <- filterByExpr(x)
+filt_tmp <- table(keep.exprs) # see in TRUE how many genes pass the filter
+x.filt_tmp <- x[keep.exprs, , keep.lib.sizes = FALSE]
+
+# CMP for the filtered object containing raw data
+x.cpm <- cpm(x.filt_tmp)
+
 # calculate the minimal number of samples for cpm > MIN_CPM
 MIN_REPL <- min(table(EXP_FACTORS))
 
 # filtering by CPM
 keep.exprs <- rowSums(x.cpm > MIN_CPM) >= MIN_REPL
 filteredOK <- table(keep.exprs) # see in TRUE how many genes pass the filter
-x.filt <- x[keep.exprs, , keep.lib.sizes = FALSE]
+x.filt <- x.filt_tmp[keep.exprs, , keep.lib.sizes = FALSE]
 ```
 
 The final balance is the following:
 
 Genes | Amount  | Percent (%)
 :---- | ----:   | ---:
-Total                                   | `r total_genes`       | 100
-Expressed in all samples                | `r none_is0[[2]]`  | `r round(100 * none_is0[[2]]/total_genes)`
-Not expressed in at least 1 sample      | `r at_least_1`     | `r round(100 * at_least_1/total_genes)`
-Never expressed                         | `r all_are0[[2]]`  | `r round(100 * all_are0[[2]]/total_genes)`
-Tentetively useful                      | `r all_are0[[1]]`  | `r round(100 * all_are0[[1]]/total_genes)`
-Really useful after `CMP >` `r MIN_CPM` | `r filteredOK[[2]]`| `r round(100 * filteredOK[2][1]/total_genes)`
+Total                                   | `r total_genes`         | 100
+Expressed in all samples                | `r none_is0[["TRUE"]]`  | `r round(100 * none_is0[["TRUE"]]/total_genes)`
+Not expressed in at least 1 sample      | `r at_least_1`          | `r round(100 * at_least_1/total_genes)`
+Never expressed                         | `r all_are0[["TRUE"]]`  | `r round(100 * all_are0[["TRUE"]]/total_genes)`
+Useful after `filterByExpr()`           | `r filt_tmp[["TRUE"]]`  | `r round(100 * filt_tmp[["TRUE"]]/total_genes)`
+Tentetively useful                      | `r all_are0[["FALSE"]]` | `r round(100 * all_are0[["FALSE"]]/total_genes)`
+Really useful after `CMP >` `r MIN_CPM` | `r filteredOK[["TRUE"]]`| `r round(100 * filteredOK[["TRUE"]]/total_genes)`
 
 
 
@@ -95,8 +100,8 @@ PlotGeneDensity(x.lcpm, genes.cutoff, "Raw data")
 PlotGeneDensity(x.filt.lcpm, genes.cutoff, "After filtering")
 
 # remove needless variables
-rm(none_is0, all_are0, filteredOK, keep.exprs) # from previous chunk
-rm(genes.cutoff, x.lcpm, x.filt.lcpm)
+rm(none_is0, all_are0, filteredOK, keep.exprs, filt_tmp) # from previous chunk
+rm(genes.cutoff, x.lcpm, x.filt.lcpm. x.filt_tmp)
 ```
 
 > **IMPORTANT:** After filtering, density lines should be nearly identical following a gauss-shaped profile. Peak at very low logCPM should disappear.
